fix html accessibility issues and html issues

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 <body>
   <div class="container">
-    <img id="bg-pattern-top" src="./images/bg-pattern-top.svg" />
-    <img id="bg-pattern-bottom" src="./images/bg-pattern-bottom.svg" />
+    <img id="bg-pattern-top" src="./images/bg-pattern-top.svg" alt="page top background image" />
+    <img id="bg-pattern-bottom" src="./images/bg-pattern-bottom.svg" alt="page bottom background image" />
 
     <div class="content">
       <div class="card">
-        <img class="card-header" src="./images/bg-pattern-card.svg" />
+        <img class="card-header" src="./images/bg-pattern-card.svg" alt="card header background image" />
         <div class="card-body">
-          <img class="card-image" src="./images/image-victor.jpg" />
+          <img class="card-image" src="./images/image-victor.jpg" alt="profile image" />
           <div class="card-title-container">
             <span class="stats-text">
               Victor Crest
